tests/baselines/reference/privateInstanceMemberAccessibility.errors.txt
==== tests/cases/compiler/privateInstanceMemberAccessibility.ts (6 errors) ====
    class Base {
        private foo: string;
    }
    
    class Derived extends Base {
        x = super.foo; // error
                  ~~~
!!! error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
        y() {
            return super.foo; // error
                         ~~~
!!! error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
        }
        z: typeof super.foo; // error
                  ~~~~~
!!! error TS1006: Identifier expected; 'super' is a keyword.
                        ~~~
!!! error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
    
        a: this.foo; // error
           ~~~~
!!! error TS1006: Identifier expected; 'this' is a keyword.
                ~~~
!!! error TS2107: 'Base.foo' is inaccessible.
    }